--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,6 +1,3 @@
 Some abstract description of the project... 
 \lipsum[4-5]
-<<<<<<< HEAD
-ffffsds
-=======
->>>>>>> 45c398972e2e2e028b4e97cae9c2f2561abfb42b
+testing...
