--- a/report/main.tex
+++ b/report/main.tex
@@ -90,6 +90,10 @@
 \clearpage
 \section{Hardware Design}
 
+\section{Sensors}
+\label{sec:sensors}
+\input{sensors.tex}
+
 \clearpage
 \section{Software Design}
 
