--- a/report/main.tex
+++ b/report/main.tex
@@ -106,6 +106,12 @@
 \input{software_design.tex}
 
 \clearpage
+\section{Kalman filter}
+\chapterauthor{Axelsson, Oskar (no one)}
+\input{kf.tex}
+
+
+\clearpage
 \input{references.tex}
 
 \end{document}
