--- a/report/main.tex
+++ b/report/main.tex
@@ -6,11 +6,12 @@
 \usepackage{lipsum}
 \usepackage{amssymb,amsmath}
 \usepackage{listings}
-
+\usepackage{amsfonts}
 %graphics
 \usepackage{graphicx, xcolor}
 \usepackage{rotating}
 \usepackage{subfig}
+\usepackage{float}
 
 % links
 \usepackage{color}
@@ -52,6 +53,8 @@
 \pagestyle{fancy}
 \lhead{Project SailorAid}
 \chead{}
+
+
 \rhead{\today}
 \lfoot{}
 \cfoot{\thepage~of~\pageref{LastPage}}
