--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -1,4 +1,4 @@
-\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for horizontal lines, change thickness here
+﻿\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for horizontal lines, change thickness here
 
 \center % Centre everything on the page
 
@@ -33,7 +33,7 @@
 		Brolin, Daniel, \\ 
 		Eriksson, Kenny \\ 
 		Lundberg, Josef, \\ 
-		???, Elias \\ 
+		Grape, Elias \\ 
 		Sjölund, Johannes \\
 		Theolin, Henrik
 	\end{flushleft}
