--- a/report/main.tex
+++ b/report/main.tex
@@ -99,8 +99,9 @@
 \clearpage
 \section{Hardware Design}
 
+\clearpage
 \section{Sensors}
-\label{sec:sensors}
+\chapterauthor{Lundberg, Josef (no one)}
 \input{sensors.tex}
 
 \clearpage
