--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -94,6 +94,7 @@ It seems like a smart choice because when the system is battery operated, like i
 
 The gain on this piece is easily calculated with this function. Gain is 5 plus 80k ohm divided by our chosen resistor Rg.
 
+% Figure showing the implementation of this part and it's connections
 
 If our desired 20 gain might not work or the voltages calculated is off, the gain is easily redone with this expression.
 
