--- a/report/references.tex
+++ b/report/references.tex
@@ -8,5 +8,23 @@
   \url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
 \bibitem{x-cube-mems1}
   \url{http://www.st.com/en/embedded-software/x-cube-mems1.html}
+  
+  \bibitem{animal} 
+D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
+\textit{Proceedings of
+the}. IEEE, 85(1):6 –23, jan 1997
+
+ 
+\bibitem{boken} 
+BOKEN
+\textit{BOKEN}. 
+
+ 
+\bibitem{nonlinear} 
+Dr. Oliver Nelles
+\\\texttt{nonlinear system identification.}
+
+\bibitem{kf eff}
+Duygun, M., Kutlu, L. \& Sickles, R.C. J Prod Anal (2016) 46: 155. \url{https://doi.org/10.1007/s11123-016-0477-z}
 
 \end{thebibliography}
