--- a/report/main.tex
+++ b/report/main.tex
@@ -108,6 +108,7 @@
 \section{Software Design}
 \chapterauthor{Sjölund, Johannes (no one)}
 \input{software_design.tex}
+\input{android.tex}
 
 \clearpage
 \section{Kalman filter}
