Fix .tex file encoding problem, correct figure file names

--- a/report/ekf.tex
+++ b/report/ekf.tex
@@ -37,7 +37,7 @@ If Eq.\eqref{eq.measurement} and Eq.\eqref{eq.Update} is analyzed we see that de
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{Bild1.jpg}
+\includegraphics[width=0.8\textwidth]{Bild1.JPG}
 \caption{System diagram of Kalman prediction}
 \label{kalman_system}
 \end{figure}
@@ -47,7 +47,7 @@ It exist different types of integration levels most common are loosely, tightly 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{loose_coup.jpg}
+\includegraphics[width=0.8\textwidth]{loose_coup.JPG}
 \caption{GPS/INS with loose integration}
 \label{kalman_system}
 \end{figure}
