--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -1,5 +1,4 @@
-﻿\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for horizontal lines, change thickness here
-
+\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 \center % Centre everything on the page
 
 %------------------------------------------------
