--- a/report/references.tex
+++ b/report/references.tex
@@ -27,4 +27,7 @@ Dr. Oliver Nelles
 \bibitem{kf eff}
 Duygun, M., Kutlu, L. \& Sickles, R.C. J Prod Anal (2016) 46: 155. \url{https://doi.org/10.1007/s11123-016-0477-z}
 
+\bibitem{UoC}
+  \url{https://edg.uchicago.edu/tutorials/load_cell/}
+
 \end{thebibliography}
