Report more about firmware. Moved figures.

--- a/report/ekf.tex
+++ b/report/ekf.tex
@@ -30,14 +30,14 @@ where $v_k$ and $w_k$ is the process noise and measurement noise, respectively b
 If Eq.\eqref{eq.measurement} and Eq.\eqref{eq.Update} is analyzed we see that depending on how much we believe in the observations that are observed will affect the gain matrix. Consider Fig. \ref{kalman_algo} as a map of how the algorithm works and Fig. \ref{kalman_system} as a description on how the system works.
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{kalman_algo}
+\includegraphics[width=0.8\textwidth]{Figures/kalman_algo.png}
 \caption{Kalman Filter prediction algorithm}
 \label{kalman_algo}
 \end{figure}
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{Bild1.JPG}
+\includegraphics[width=0.8\textwidth]{Figures/Bild1.JPG}
 \caption{System diagram of Kalman prediction}
 \label{kalman_system}
 \end{figure}
@@ -47,7 +47,7 @@ It exist different types of integration levels most common are loosely, tightly 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{loose_coup.JPG}
+\includegraphics[width=0.8\textwidth]{Figures/loose_coup.JPG}
 \caption{GPS/INS with loose integration}
 \label{kalman_system}
 \end{figure}
