--- a/report/kf.tex
+++ b/report/kf.tex
@@ -25,7 +25,7 @@ Where $v_k$ and $w_k$ is the process noise and measurement noise, respectively b
 If Eq.\eqref{eq.measurement} and \eqref{eq.Update} is analyzed we see that depending on how much we believe in the observations that are observed will affect the gain matrix. Consider Fig. \ref{kalman} as a map of how the algorithm works.
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{kalman_algo}
+\includegraphics[width=0.8\textwidth]{Figures/kalman_algo.png}
 \caption{}
 \label{kalman}
 \end{figure}
@@ -49,7 +49,7 @@ $x_{pos}$ and $y_{pos}$ is the position in x and y direction, respectively, velo
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{b_t.pdf}
+\includegraphics[width=0.8\textwidth]{Figures/b_t.pdf}
 \caption{}
 \label{bat}
 \end{figure}
