--- a/report/main.tex
+++ b/report/main.tex
@@ -85,7 +85,7 @@
 
 \setcounter{page}{2}
 \section{Introduction}
-\chapterauthor{Sjölund, Johannes (Theolin, Henrik)}
+\chapterauthor{who??? (no one)}
 \input{introduction.tex}
 
 \section{The Physics of Sailing}
