--- a/report/references.tex
+++ b/report/references.tex
@@ -8,8 +8,16 @@
   \url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
 \bibitem{x-cube-mems1}
   \url{http://www.st.com/en/embedded-software/x-cube-mems1.html}
-  
-  \bibitem{animal} 
+\bibitem{bluenrg-app}
+  \url{http://play.google.com/store/apps/details?id=com.st.blunrg}
+\bibitem{x-nucleo-idb05a1}
+  \url{http://www.st.com/en/ecosystems/x-nucleo-idb05a1.html}
+\bibitem{x-nucleo-iks01a2}
+  \url{http://www.st.com/en/ecosystems/x-nucleo-iks01a2.html}
+\bibitem{madgwick}
+  \url{http://x-io.co.uk/open-source-imu-and-ahrs-algorithms}
+
+\bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of
 the}. IEEE, 85(1):6 –23, jan 1997
