--- a/report/titlepage.tex
+++ b/report/titlepage.tex
@@ -63,7 +63,7 @@
 %------------------------------------------------
 
 \vfill\vfill
-\includegraphics[width=0.2\textwidth]{ltu.jpg}\\[1cm] % Include a department/university logo - this will require the graphicx package
+\includegraphics[width=0.2\textwidth]{Figures/ltu.jpg}\\[1cm] % Include a department/university logo - this will require the graphicx package
  
 %----------------------------------------------------------------------------------------
 
