Report on madgwick

--- a/report/main.tex
+++ b/report/main.tex
@@ -7,6 +7,8 @@
 \usepackage{amssymb,amsmath}
 \usepackage{listings}
 \usepackage{amsfonts}
+\usepackage{todonotes}
+
 %graphics
 \usepackage{graphicx, xcolor}
 \usepackage{rotating}
@@ -113,6 +115,7 @@
 
 \clearpage
 \section{Kalman filter}
+\label{ekf}
 \chapterauthor{Axelsson, Oskar (no one)}
 \input{ekf.tex}
 
