--- a/report/references.tex
+++ b/report/references.tex
@@ -16,11 +16,12 @@
   \url{http://www.st.com/en/ecosystems/x-nucleo-iks01a2.html}
 \bibitem{madgwick}
   \url{http://x-io.co.uk/open-source-imu-and-ahrs-algorithms}
+\bibitem{madgwick-report}
+  \url{http://x-io.co.uk/res/doc/madgwick_internal_report.pdf}
 
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
-\textit{Proceedings of
-the}. IEEE, 85(1):6 –23, jan 1997
+\textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
 
  
 \bibitem{boken} 
