Update report about firmware

--- a/report/main.tex
+++ b/report/main.tex
@@ -8,6 +8,7 @@
 \usepackage{listings}
 \usepackage{amsfonts}
 \usepackage{todonotes}
+\usepackage{listings}
 
 %graphics
 \usepackage{graphicx, xcolor}
