--- a/report/references.tex
+++ b/report/references.tex
@@ -18,7 +18,10 @@
   \url{http://x-io.co.uk/open-source-imu-and-ahrs-algorithms}
 \bibitem{madgwick-report}
   \url{http://x-io.co.uk/res/doc/madgwick_internal_report.pdf}
-
+\bibitem{gps}
+  \url{http://update.maestro-wireless.com/GNSS/A2235-H/Maestro_GPS_Evaluation_Kit_EVA2235_H_User_Manual_V01.pdf}
+\bibitem{libnmea}
+  \url{http://github.com/jacketizer/libnmea}
 \bibitem{animal} 
 D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
 \textit{Proceedings of the}. IEEE, 85(1):6 –23, jan 1997
