--- a/report/main.tex
+++ b/report/main.tex
@@ -9,7 +9,7 @@
 \usepackage{amsfonts}
 \usepackage{todonotes}
 \usepackage{listings}
-
+\usepackage{scrextend}
 %graphics
 \usepackage{graphicx, xcolor}
 \usepackage{rotating}
