--- a/report/references.tex
+++ b/report/references.tex
@@ -41,5 +41,32 @@ Duygun, M., Kutlu, L. \& Sickles, R.C. J Prod Anal (2016) 46: 155. \url{https://
 
 \bibitem{UoC}
   \url{https://edg.uchicago.edu/tutorials/load_cell/}
+\bibitem{animal} 
+D.L. Hall and J. Llinas. An introduction to multisensor data fusion. 
+\textit{Proceedings of
+the}. IEEE, 85(1):6 –23, jan 1997
+
+ 
+\bibitem{boken} 
+BOKEN
+\textit{BOKEN}. 
+
+ 
+\bibitem{nonlinear} 
+Dr. Oliver Nelles
+\\\texttt{nonlinear system identification.}
+
+\bibitem{kf eff}
+Duygun, M., Kutlu, L. \& Sickles, R.C. J Prod Anal (2016) 46: 155. \url{https://doi.org/10.1007/s11123-016-0477-z}
+
+\bibitem{non-linear}
+Noureldin ., Karamat T.B., Georgy J. (2013)\texttt{ Basic Navigational Mathematics, Reference Frames and the Earth’s Geometry. In: Fundamentals of Inertial Navigation, Satellite-based Positioning and their Integration.} Springer, Berlin, Heidelberg
+
+\bibitem{signal_process}
+Probability and Random Processes with Applications to Signal Processing, 4/E (2012). 
+Henry Stark, John W Woods. Pearson Higher Education. 
+
+\bibitem{Discrete_kalman}
+Estimation, Control, and the Discrete Kalman Filter, 1989. Donald E. Catlin
 
 \end{thebibliography}
