--- a/report/main.tex
+++ b/report/main.tex
@@ -112,9 +112,9 @@
 
 \clearpage
 \section{Kalman filter}
-\label{ekf}
+\label{kf}
 \chapterauthor{Axelsson, Oskar (no one)}
-\input{ekf.tex}
+\input{kf.tex}
 
 
 \clearpage
